--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <a href="programs.html" class="nav-link" data-key="programs">Programs</a>
                     <a href="events.html" class="nav-link" data-key="events">Events</a>
                     <a href="#team" class="nav-link" data-key="team">Team</a>
+                    <a href="blog.html" class="nav-link" data-key="blog">Blog</a>
                     <a href="contact.html" class="nav-link" data-key="contacts">Contact</a>
 
                     <!-- Language Selector -->
@@ -184,15 +185,6 @@
                     <span class="stat-label" data-i18n="stats.3.label">Trees Planted</span>
                 </div>
             </div>
-
-            <!-- Scroll indicator -->
-            <div class="scroll-indicator">
-                <div class="scroll-line">
-                    <div class="scroll-dot"></div>
-                </div>
-                <span class="scroll-text" data-i18n="scroll">Scroll down</span>
-            </div>
-        </section>
 
         <!-- About Section -->
         <section class="about-section" id="about">
