--- a/events.html
+++ b/events.html
@@ -50,6 +50,7 @@
                     <a href="about.html" class="nav-link" data-key="about">About</a>
                     <a href="programs.html" class="nav-link" data-key="programs">Programs</a>
                     <a href="events.html" class="nav-link" data-key="events">Events</a>
+                    <a href="blog.html" class="nav-link">Blog</a>
                     <a href="team.html" class="nav-link" data-key="team">Team</a>
                     <a href="contact.html" class="nav-link" data-key="contacts">Contact</a>
 
