--- a/team.html
+++ b/team.html
@@ -51,6 +51,7 @@
                     <a href="programs.html" class="nav-link">Programs</a>
                     <a href="events.html" class="nav-link">Events</a>
                     <a href="blog.html" class="nav-link">Blog</a>
+                    <a href="blog.html" class="nav-link">Blog</a>
                     <a href="team.html" class="nav-link">Team</a>
                     <a href="contact.html" class="nav-link">Contact</a>
 
