--- a/blog.html
+++ b/blog.html
@@ -149,6 +149,7 @@
                     <a href="about.html" class="nav-link">About</a>
                     <a href="programs.html" class="nav-link">Programs</a>
                     <a href="events.html" class="nav-link">Events</a>
+                    <a href="blog.html" class="nav-link">Blog</a>
                     <a href="team.html" class="nav-link">Team</a>
                     <a href="contact.html" class="nav-link">Contact</a>
 
