--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Campus Initiative</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -181,12 +181,7 @@
                 <div class="stat-card" style="animation-delay: 0.45s;">
                     <div class="stat-icon-wrap">
                         <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#84cc16" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M17 10V4h-2"/>
-                            <path d="M17 7 7 17"/>
-                            <path d="M17 17v6h-2"/>
-                            <path d="M22 22 7 7"/>
-                            <path d="M7 17H1v-2"/>
-                            <path d="M7 7V1H5"/>
+                            <path d="M12 19V5M5 11l7-7 7 7M5 15l7-7 7 7M8 19h8" />
                         </svg>
                     </div>
                     <span class="stat-number" id="stat3">0M</span>
@@ -254,7 +249,6 @@
                                 <img src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?w=600&h=400&fit=crop"
                                      alt="Green Campus volunteers planting trees"
                                      style="width: 100%; height: 100%; object-fit: cover; border-radius: 16px;">
-                                <span class="image-label" data-i18n="about.imageLabel" style="position: absolute; bottom: 16px; left: 16px; background: rgba(132, 204, 22, 0.9); color: white; padding: 8px 16px; border-radius: 8px; font-size: 14px; font-weight: 600;">Our volunteers in action</span>
                             </div>
                         </div>
                         <div class="floating-card">
